--- a/iq-dist-4.conf
+++ b/iq-dist-4.conf
@@ -9,7 +9,7 @@ server {
     root /var/www/html;
 
 
-    listen 443 ssl; # managed by Certbot
+    listen 443; # managed by Certbot
  #   ssl_certificate /etc/letsencrypt/live/iq-dist-3.com/fullchain.pem; # managed by Certbot
  #   ssl_certificate_key /etc/letsencrypt/live/iq-dist-3.com/privkey.pem; # managed by Certbot
  #   include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
