--- a/iq-dist-4.conf
+++ b/iq-dist-4.conf
@@ -1,48 +1,41 @@
-#Re-write the user-agent header. Append mobile if required
 map $http_user_agent $ua {
     default "iq-dist-4";
     ~*Mobi "iq-dist-4 mobile";
 }
 
 server {
+    listen 80;
     server_name iq-dist-4.com;
+
+    # Redirect all traffic to HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443;
+    server_name iq-dist-4.com;
+    
     root /var/www/html;
 
+    # DigitalOcean might handle SSL termination, so remove SSL directives if needed.
 
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/iq-dist-4.com/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/iq-dist-4.com/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-        
-    #Update the user-agent header
+    # Update the user-agent header
     proxy_set_header User-Agent $ua;
-
 
     location / {
         proxy_pass https://iq-dist.com;
 
-        #Re-Write cookie domains
+        # Re-Write cookie domains
         proxy_cookie_domain iq-dist.com iq-dist-4.com;
         proxy_cookie_domain iq-dist-2.com iq-dist-4.com;
 
-        #Don't share respondent IP
+        # Don't share respondent IP
         proxy_hide_header X-Real-IP;
         proxy_hide_header X-Forwarded-For;
 
-
-        }
-}
-
-server {
-    if ($host = iq-dist-4.com) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
-    listen 80;
-    server_name iq-dist-4.com;
-    return 404; # managed by Certbot
-
-
+        # Trust headers from DigitalOcean load balancer
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+    }
 }
