re-write headers

--- a/iq-dist-4.conf
+++ b/iq-dist-4.conf
@@ -22,7 +22,7 @@ server {
     proxy_set_header User-Agent $ua;
 
     location / {
-        proxy_pass https://iq-dist.com;
+        proxy_pass https://iq-dist-3.com;
 
         # Re-Write cookie domains
         proxy_cookie_domain iq-dist.com iq-dist-3.com;
