fix pass location

--- a/iq-dist-4.conf
+++ b/iq-dist-4.conf
@@ -1,6 +1,6 @@
 map $http_user_agent $ua {
-    default "iq-dist-3";
-    ~*Mobi "iq-dist-3 mobile";
+    default "iq-dist-4";
+    ~*Mobi "iq-dist-4 mobile";
 }
 
 server {
@@ -22,11 +22,11 @@ server {
     proxy_set_header User-Agent $ua;
 
     location / {
-        proxy_pass https://iq-dist-4.com;
+        proxy_pass https://iq-dist.com;
 
         # Re-Write cookie domains
-        proxy_cookie_domain iq-dist.com iq-dist-3.com;
-        proxy_cookie_domain iq-dist-2.com iq-dist-3.com;
+        proxy_cookie_domain iq-dist.com iq-dist-4.com;
+        proxy_cookie_domain iq-dist-2.com iq-dist-4.com;
 
         # Don't share respondent IP
         proxy_hide_header X-Real-IP;
